[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "camera_simulator"
description = "Camera simulator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,~=3.14.3"
keywords = [
]
authors = [
  { name = "bobejo"},
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic",
    "pyyaml",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/bobejo/camera_simulator"

[project.scripts]
camera_simulator = "camera_simulator.cli:main"

[tool.hatch.version]
path = "src/camera_simulator/version.py"
pattern = 'VERSION = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["src/camera_simulator"]


[tool.hatch.envs.default]
skip-install = true
dependencies = [
    "pydantic",
    "pyyaml",
]
path = ".venv"

[tool.hatch.envs.hatch-test]
default-args = ["tests"]
dependencies = [
  "pytest",
  "pytest-cov",
  "harvesters~=1.4",
  "genicam~=1.5"
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.hatch-static-analysis]
config-path = "none"

[tool.hatch.envs.types]
dependencies = [
  "ty",
]

[tool.hatch.envs.types.scripts]
check = "ty check src"
